<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_fragment_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_view"
    tools:context=".ui.fragments.GetLoan">

    <ImageView
        android:id="@+id/image_view_loan"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_image"
        android:scaleType="matrix"
        android:src="@drawable/login_sign_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_loan_conditions_get"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_loan_conditions_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_loan">

        <LinearLayout
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loan_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/loan_terms"
                android:paddingEnd="@dimen/text_padding"
                android:paddingStart="@dimen/text_padding"
                android:paddingTop="@dimen/text_padding"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/list_of_loan_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/text_padding"
                android:paddingStart="@dimen/text_padding"
                android:paddingBottom="@dimen/text_padding"
                android:text="@string/max_amount_percent_period" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_get_loan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_loan_conditions_get">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edit_amount"
                style="@style/LoginSignInput"
                android:hint="@string/specify_the_loan_amount"
                android:digits="@string/digits_edit"
                android:autofillHints="@string/digits_edit"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_firstName"
                style="@style/LoginSignInput"
                android:autofillHints="@string/enter_your_name"
                android:hint="@string/enter_your_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_lastName"
                style="@style/LoginSignInput"
                android:autofillHints="@string/enter_your_last_name"
                android:hint="@string/enter_your_last_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_phoneNumber"
                style="@style/LoginSignInput"
                android:autofillHints="@string/enter_your_phone_number"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/btn_request_loan"
                style="@style/ButtonOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/request_for_a_loan"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_update_terms"
        style="@style/FabStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/ic_sync"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription"
        />


</androidx.constraintlayout.widget.ConstraintLayout>