<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_view"
    tools:context=".ui.fragments.Login">

    <ImageView
        android:id="@+id/image_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/login_sign_header"
        app:layout_constraintBottom_toTopOf="@+id/card_view_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/edit_text_username"
                style="@style/LoginSignInput"
                android:autofillHints="@string/text_username"
                android:hint="@string/text_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_text_password"
                style="@style/LoginSignInput"
                android:autofillHints="@string/text_password"
                android:hint="@string/text_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_registration"
                style="@style/ButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/ButtonOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>