<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_fragment_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_view"
    tools:context=".ui.fragments.Start">

    <ImageView
        android:id="@+id/image_view_loan"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_image"
        android:scaleType="matrix"
        android:src="@drawable/login_sign_header"
        app:layout_constraintBottom_toTopOf="@+id/card_view_login_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_login_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_loan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/btn_personal_loan"
                style="@style/ButtonOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/apply_for_a_personal_loan"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_loans_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_login_start"
        tools:listitem="@layout/recycler_loans" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_big"
        style="@style/FabStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_key_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription"/>

    <include layout="@layout/fab_layout" />

 </androidx.constraintlayout.widget.ConstraintLayout>