<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Manual">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_manual_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btn_close"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recycler_manual"/>

    <Button
        android:id="@+id/btn_close"
        style="@style/ButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/close"
        android:layout_margin="@dimen/margin_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

